--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ h1, h2 ,h3, h4, h5, h6 {
     text-align: center;
     margin-top: 25px;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .btn {
@@ -209,6 +210,10 @@ h1, h2 ,h3, h4, h5, h6 {
     box-shadow: inset -2px -3px 20px 2px rgba(0, 0, 0, 0.16);
     backdrop-filter: blur(16px);
 
+}
+
+body.lock {
+    overflow: hidden;
 }
 
 /* SERVICES */
@@ -581,6 +586,7 @@ h1, h2 ,h3, h4, h5, h6 {
     text-align: center;
     margin-left: 190px;
     margin-top: 47px;
+    cursor: pointer;
 }
 
 .form-btn-text {
@@ -705,16 +711,123 @@ h1, h2 ,h3, h4, h5, h6 {
     display: none;
     height: 202px;
 }
+
+/* POPUP */
+
+.popup {
+    position: fixed;
+    z-index: 70;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.8s ease 0s;
+}
+
+.open {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup-content {
+    background-color: #fffbf8;
+    color: #000;
+    max-width: 520px;
+}
+
+.popup-body {
+    position: relative;
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
+    
+}
+
+.popup-close {
+    margin-left: 93%;
+    margin-top: 3%;
+    cursor: pointer;
+}
+
+.popup-title {
+    font-family: 'Playfair Display';
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 40px;
+    padding: 70px 144px 32px 129px ;
+}
+
+.popup-text {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.popup-input {
+    width: 368px;
+    height: 39px;
+    margin-top: 12px;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    background: rgba(255, 255, 255, 0.78);
+    font-family: Montserrat;
+}
+
+.popup-btn {
+    width: 210px;
+    height: 46px;
+    background-color: #000;
+    color: #fff;
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 36px 155px 70px 150px;
+}
+
+.popup-in {
+    padding: 12px 76px;
+}
+
+.popup-comp {
+    z-index: 90;
+}
+
+.popup-nt {
+    transition: none;
+}
+
+.popup-comp-title {
+    padding: 135px 76px 9px 76px ;
+    text-align: center;
+}
+
+.popup-comp-text {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    letter-spacing: -0.04em;
+    padding-top: 9px;
+    padding-bottom: 169px;
+}
+
 /* MEDIA */
 
 @media screen and (max-width: 992px) {
     
     .container {
         width: 720px;
-    }
-
-    body.lock {
-        overflow: hidden;
     }
 
     .header {
@@ -914,6 +1027,7 @@ h1, h2 ,h3, h4, h5, h6 {
 
     .footer-list1 {
         margin-left: 40%;
+        width: 200px;
     }
 
     .footer-map-tab {
@@ -1221,6 +1335,11 @@ h1, h2 ,h3, h4, h5, h6 {
         font-size: 22px;
     }
 
+    .footer-list1 {
+        width: 140px;
+        margin-left: 20%;
+    }
+
     .footer-link1 {
         line-height: 50px;
         font-size: 14px;
@@ -1243,7 +1362,7 @@ h1, h2 ,h3, h4, h5, h6 {
     }
 
     .footer-col-2 {
-        margin-left: 25%;
+        margin-left: 10%;
         margin-top: 10px;
     }
 
